@@ -43,13 +43,16 @@ Usage
 * size, length は mmap(2) したサイズを返します。
 * to_s は mmap(2) した領域を String で返します。Encoding は常に ASCII-8BIT です。
 * slice は mmap(2) した領域の一部を新たな MmapScanner オブジェクトで返します。
-* scan は正規表現に一致した部分を返し、ポインタを進めます。一致しない場合は nil を返します。
+* scan はポインタ位置で正規表現との一致を試みます。一致した部分を返し、ポインタを進めます。一致しない場合は nil を返します。
+* scan_until は scan と同じですが、現在のポインタの位置以降で一致を試みます。
 * check は scan と同じですが、ポインタを進めません。
 * skip は scan と同じですが、一致したバイト数を返します。
 * match? は check と同じですが、一致したバイト数を返します。
 * peek は指定したバイト数分のデータを返します。ポインタは進みません。
 * eos? はポインタが末尾に達していると true を返します。
 * rest はポインタ以降のデータを返します。
+* matched は正規表現に一致した部分を MmapScanner オブジェクトで返します。
+* matched(n) は正規表現の n番目の括弧に一致した部分を MmapScanner オブジェクトで返します。
 * pos は現在のポインタの位置を返します。
 * pos= でポインタ位置を変更することができます。
 
