@@ -117,6 +117,17 @@ describe MmapScanner do
         subject.matched.should be_nil
       end
     end
+    describe '#matched(nth)' do
+      it 'returns nth part of matched string' do
+        subject.scan(/(..)(..)(..)/)
+        subject.matched(0).to_s.should == '012345'
+        subject.matched(1).to_s.should == '01'
+        subject.matched(2).to_s.should == '23'
+        subject.matched(3).to_s.should == '45'
+        subject.matched(4).should be_nil
+        subject.matched(-1).should be_nil
+      end
+    end
     describe '#peek' do
       it 'returns MmapScanner' do
         subject.peek(10).should be_instance_of MmapScanner
