@@ -1,3 +1,8 @@
+2011-03-21  TOMITA Masahiro  <tommy@tmtm.org>
+
+	* add MmapScanner#matched(n)
+	* FIX: memory leak.
+
 2011-03-03  TOMITA Masahiro  <tommy@tmtm.org>
 
 	* add MmapScanner#scan_until(), #matched()
